# codexa

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Contributors.md  ISSUE_TEMPLATE.md  Pull request template.md  README.md  SECURITY.md
src/: chunker.rs  config.rs  generator.rs  indexer.rs  main.rs  vector.rs
